fix css mat-hint overflow at invitatation form

--- a/src/web/src/app/space/invitation-list/component.css
+++ b/src/web/src/app/space/invitation-list/component.css
@@ -18,3 +18,7 @@
 .red {
 	color: red;
 }
+
+.pad-bot-30 {
+	padding-bottom: 30px !important;
+}
